fix: whitespace under the img

--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -10,6 +10,7 @@
         margin-bottom: 1.625rem;
         
         &-photo {
+            display: block;
             width: 100%;
         }
     }
